2004-02-08  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/worker.scm (call-worker/gsid->sxml): added.
	(make-match&pick) : dropped the support of extra sxpath spec.
	it is easier to apply sxpath in call-worker/gsid->sxml instead
	of here; it will produce comprehensive error log.
	Also decode uri encoding.

	* test/nqueen.scm : added to test examples/nqueen.

2004-02-06  Shiro Kawai  <shiro@acm.org>

	* src/kahua/partcont.scm, test/partcont.scm :
	(reset/pc, call/pc, let/pc) : implemented partial continuation
	according to Gasbichler&Sperber ICFP02 paper.
	* src/kahua/kahua.scm : extends kahua.partcont
	* src/kahua/server.scm : wrap handler invocation by reset/pc,
	so that the partial continuation captured in the application-server
	returns correctly.

	* examples/nqueen/nqueen.kahua : added an example that uses
	partial continuation (nqueen code by Koichi Sasada).

	* examples/lambdabooks/login.kahua : slightly revised using
	entry-lambda

2004-02-03  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm : replaced sxml:string->xml with 
	sxml:string->html
	
2004-02-02  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin, test/admin.scm : added "adduser", "deluser", "lsuser" commands for the developer account management.

	* src/kahua-admin, src/kahua-spvr : fixed "help" command. now it shows all the commands on both scripts.

2004-01-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/developer.scm, src/user.conf.sample : added the developer account.
	* src/kahua/test/developer.scm : added.
	
	* src/kahua-shell.in : added the REPL interface for kahua developers.

	* src/kahua.conf.sample (userconf-file), src/kahua/config.scm :
	added userconf-file slot

2004-01-25  Shiro Kawai  <shiro@acm.org>

	* src/kahua/session.scm :
	(<session-cont>): added permanent? slot
	(session-cont-register): set permanent? #t for permanent entries
	(session-cont-sweep): avoid sweeping permanent entries.

2004-01-24  Shiro Kawai  <shiro@acm.org>
